--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       # LOG_LEVEL: "debug"
     depends_on:
       - db
-    command: ["./wait-for", "db:5432", "--", "node", "index.js"]
+    command: ["node", "index.js"]
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:4242/health || exit 1
       interval: 1s
